--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.1'
+
 //    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
-    testImplementation 'org.testng:testng:7.1.0'
+//    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'junit:junit:4.13'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -22,5 +25,6 @@ dependencies {
 
 test {
 //    useJUnitPlatform()
-    useTestNG()
+//    useTestNG()
+    useJUnit()
 }
