--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-
 //    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
 //    testImplementation 'org.testng:testng:7.1.0'
     testImplementation 'junit:junit:4.13'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.6.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -24,7 +25,7 @@ dependencies {
 }
 
 test {
-//    useJUnitPlatform()
+    useJUnitPlatform()
 //    useTestNG()
     useJUnit()
 }
